Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -27,9 +27,13 @@
 <h3>
 <a id="two-way-communication-between-laravel-and-your-client" class="anchor" href="#two-way-communication-between-laravel-and-your-client" aria-hidden="true"><span class="octicon octicon-link"></span></a>Two-way communication between Laravel and your Client</h3>
 
-<p>TwoStream is a WebSocket server for Laravel 5, built upon <a href="http://socketo.me">Ratchet</a>. This package is currently in <strong>beta</strong> stage and not complete. The most important functionality has been built but could use some more testing.
-I am currently working on the Documentation, so that's coming soon. I'll try and get a decent API explorer up ASAP. For now, the info below will have to do.
-TwoStream is Laravel 5 only.</p>
+<p>TwoStream is a WebSocket server for <a href="https://github.com/laravel/framework/" title="Laravel 5">Laravel 5</a>, built upon <a href="http://socketo.me">Ratchet</a>. This package is currently in <strong>beta</strong> stage and not complete. The most important functionality has been built but could use some more testing.</p>
+
+<p>I am currently working on the Documentation, so that's coming soon. For now, the info below will have to do.</p>
+
+<p><a href="http://cupoftea696.github.io/TwoStream/docs/api/">API Explorer</a></p>
+
+<p>TwoStream is <a href="https://github.com/laravel/framework/" title="Laravel 5">Laravel 5</a> only.</p>
 
 <h2>
 <a id="completed" class="anchor" href="#completed" aria-hidden="true"><span class="octicon octicon-link"></span></a>Completed:</h2>
@@ -58,7 +62,7 @@ TwoStream is Laravel 5 only.</p>
 <h3>
 <a id="acknowledgements" class="anchor" href="#acknowledgements" aria-hidden="true"><span class="octicon octicon-link"></span></a>Acknowledgements</h3>
 
-<p>TwoStream is heavily based on <a href="https://github.com/sidneywidmer/Latchet" title="Latchet (L4 Package)">Latchet</a>. Some of the internal workings and public API is entirely different, other parts are near copy-pasted from the original code. The main difference between TwoStream and <a href="https://github.com/sidneywidmer/Latchet" title="Latchet (L4 Package)">Latchet</a> is (or will be) Laravel 5 support and read-only access to Session data. If you are using Laravel 4, please do go and use <a href="https://github.com/sidneywidmer/Latchet" title="Latchet (L4 Package)">Latchet</a> since it is pretty good. (Although the creator claims it's not even an alhpa version. Believe me, it is.) If you use Laravel 5 however, feel free to start testing this out and contribute.</p>
+<p>TwoStream is heavily based on <a href="https://github.com/sidneywidmer/Latchet" title="Latchet (L4 Package)">Latchet</a>. Some of the internal workings and public API is entirely different, other parts are near copy-pasted from the original code. The main difference between TwoStream and <a href="https://github.com/sidneywidmer/Latchet" title="Latchet (L4 Package)">Latchet</a> is <a href="https://github.com/laravel/framework/" title="Laravel 5">Laravel 5</a> support and read-only access to Session data. If you are using Laravel 4, please do go and use <a href="https://github.com/sidneywidmer/Latchet" title="Latchet (L4 Package)">Latchet</a> since it is pretty good. (Although the creator claims it's not even an alpha version. Believe me, it is.) If you use <a href="https://github.com/laravel/framework/" title="Laravel 5">Laravel 5</a> however, feel free to start testing this out and contribute.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/CupOfTea696/TwoStream">Twostream</a> is maintained by <a href="https://github.com/CupOfTea696">CupOfTea696</a>.</span>
