Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
       <p><a href="https://packagist.org/packages/cupoftea/twostream"><img src="https://poser.pugx.org/cupoftea/twostream/version.svg" alt="Latest Stable Version"></a> <a href="https://packagist.org/packages/cupoftea/twostream"><img src="https://poser.pugx.org/cupoftea/twostream/d/total.svg" alt="Total Downloads"></a> <a href="https://packagist.org/packages/cupoftea/twostream"><img src="https://poser.pugx.org/cupoftea/twostream/v/unstable.svg" alt="Latest Unstable Version"></a> <a href="https://packagist.org/packages/cupoftea/twostream"><img src="https://poser.pugx.org/cupoftea/twostream/license.svg" alt="License"></a></p>
 
 <h1>
-<a id="twostream" class="anchor" href="#twostream" aria-hidden="true"><span class="octicon octicon-link"></span></a>TwoStream</h1>
+<a id="twostream--beta-" class="anchor" href="#twostream--beta-" aria-hidden="true"><span class="octicon octicon-link"></span></a>TwoStream <sup>{{ Beta }}</sup>
+</h1>
 
 <h3>
 <a id="two-way-communication-between-laravel-and-your-client" class="anchor" href="#two-way-communication-between-laravel-and-your-client" aria-hidden="true"><span class="octicon octicon-link"></span></a>Two-way communication between Laravel and your Client</h3>
