--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Twostream by CupOfTea696</title>
+    <title>TwoStream {{ beta }} by CupOfTea696</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Twostream</h1>
-      <h2 class="project-tagline">Two-way WebSocket communication for Laravel 5</h2>
+      <h1 class="project-name">TwoStream <sup>{{ Beta }}</sup></sup></h1>
+      <h2 class="project-tagline">Two-way communication between Laravel and your Client</h2>
       <a href="https://github.com/CupOfTea696/TwoStream" class="btn">View on GitHub</a>
       <a href="https://github.com/CupOfTea696/TwoStream/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/CupOfTea696/TwoStream/tarball/master" class="btn">Download .tar.gz</a>
