--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">TwoStream {{ beta }}</h1>
+      <h1 class="project-name">TwoStream <sup>{{ Beta }}</sup></h1>
       <h2 class="project-tagline">Two-way communication between Laravel and your Client</h2>
       <a href="https://github.com/CupOfTea696/TwoStream" class="btn">View on GitHub</a>
       <a href="https://github.com/CupOfTea696/TwoStream/zipball/master" class="btn">Download .zip</a>
