--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">TwoStream <sup>{{ Beta }}</sup></h1>
-      <h2 class="project-tagline">Two-way communication between Laravel and your Client</h2>
+      <h2 class="project-tagline">Two-way communication between Laravel and the Client</h2>
       <a href="https://github.com/CupOfTea696/TwoStream" class="btn">View on GitHub</a>
       <a href="https://github.com/CupOfTea696/TwoStream/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/CupOfTea696/TwoStream/tarball/master" class="btn">Download .tar.gz</a>
@@ -26,7 +26,7 @@
 </h1>
 
 <h3>
-<a id="two-way-communication-between-laravel-and-your-client" class="anchor" href="#two-way-communication-between-laravel-and-your-client" aria-hidden="true"><span class="octicon octicon-link"></span></a>Two-way communication between Laravel and your Client</h3>
+<a id="two-way-communication-between-laravel-and-your-client" class="anchor" href="#two-way-communication-between-laravel-and-your-client" aria-hidden="true"><span class="octicon octicon-link"></span></a>Two-way communication between Laravel and the Client</h3>
 
 <p>TwoStream is a WebSocket server for <a href="https://github.com/laravel/framework/" title="Laravel 5">Laravel 5</a>, built upon <a href="http://socketo.me">Ratchet</a>. This package is currently in <strong>beta</strong> stage and not complete. The most important functionality has been built but could use some more testing.</p>
 
